--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Shehroz Mushtaq Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <!-- Header -->
+  <header>
+    <div class="hero">
+      <img src="assets/images/main.jpg" alt="Shehroz Main Photo" />
+      <h1>Shehroz Mushtaq</h1>
+      <p>Showcasing tradition, culture, and creativity</p>
+    </div>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <!-- About Section -->
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      I'm Shehroz Mushtaq, passionate about culture, fashion, and creativity.
+      Through this portfolio, I reflect my traditional roots and modern presentation.
+    </p>
+  </section>
+
+  <!-- Gallery Section -->
+  <section id="gallery">
+    <h2>Gallery</h2>
+    <div class="gallery-grid">
+      <img src="assets/images/walima.jpg" alt="Walima Look" />
+      <img src="assets/images/pentcoat.jpg" alt="Formal Pentcoat" />
+      <img src="assets/images/image1.png" alt="Traditional Kurta" />
+      <!-- Add more images here -->
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: shehroz@example.com</p>
+    <div class="socials">
+      <a href="#">Instagram</a>
+      <a href="#">Facebook</a>
+      <a href="https://github.com/YOUR-GITHUB-USERNAME">GitHub</a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Shehroz Mushtaq. All rights reserved.</p>
+  </footer>
+</body>
+</html>
 
